--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,4 @@ mod_license=MIT
 mod_version=1.0.0
 mod_group_id=com.roxxane.mtiptdcf
 mod_authors=Roxxane
-mod_description=Fix the IPersistentTriggerData crash in Music Triggers
+mod_description=Fixes the IPersistentTriggerData crash in Music Triggers
