Hopefully fix ConcurrentModificationException

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ mapping_version=1.19.2
 mod_id=mtiptdcf
 mod_name=Music Trigger IPersistentTriggerData Crash Fixer
 mod_license=MIT
-mod_version=1.0.0
+mod_version=1.0.1
 mod_group_id=com.roxxane.mtiptdcf
 mod_authors=Roxxane
-mod_description=Fixes the IPersistentTriggerData crash in Music Triggers
+mod_description=Fixes the IPersistentTriggerData crash (and more!) in Music Triggers
